--- a/第一部分：入门/Beeframework快速入门/1. Bee.md
+++ b/第一部分：入门/Beeframework快速入门/1. Bee.md
@@ -70,14 +70,14 @@ Geek们都在用！行业内N家顶级互联网公司在采用。
 
 看看哪些app在用？
 
-1. Sina Finance(新浪财经)https://itunes.apple.com/us/app/xin-lang-cai-jing/id430165157?mt=8
-1. Mengtu(萌图)https://itunes.apple.com/us/app/meng-tu/id531292307?mt=8
-1. iLoushi(i楼市)http://itunes.apple.com/cn/app/id464232572?mt=8(iPhone) https://itunes.apple.com/cn/app/id428916075?mt=8(iPad)
-1. Duopeng(多朋)http://www.duopeng.com/
-1. Yiban(易班)https://itunes.apple.com/app/yi-ban/id549775029?mt=8
-1. Golden carp(金鲤鱼理财)https://itunes.apple.com/cn/app/id584687764
-1. Tivic(TV客)http://mobile.91.com/Soft/Detail.aspx?Platform=iPhone&f_id=1373668
-1. Middling(Middling图书)https://itunes.apple.com/us/app/middling/id531625104?mt=8
+	Sina Finance(新浪财经)https://itunes.apple.com/us/app/xin-lang-cai-jing/id430165157?mt=8
+	Mengtu(萌图)https://itunes.apple.com/us/app/meng-tu/id531292307?mt=8
+	iLoushi(i楼市)http://itunes.apple.com/cn/app/id464232572?mt=8(iPhone) https://itunes.apple.com/cn/app/id428916075?mt=8(iPad)
+	Duopeng(多朋)http://www.duopeng.com/
+	Yiban(易班)https://itunes.apple.com/app/yi-ban/id549775029?mt=8
+	Golden carp(金鲤鱼理财)https://itunes.apple.com/cn/app/id584687764
+	Tivic(TV客)http://mobile.91.com/Soft/Detail.aspx?Platform=iPhone&f_id=1373668
+	Middling(Middling图书)https://itunes.apple.com/us/app/middling/id531625104?mt=8
 
  
 ## 运行要求
