--- a/第一部分：入门/Beeframework快速入门/1. Bee.md
+++ b/第一部分：入门/Beeframework快速入门/1. Bee.md
@@ -45,6 +45,13 @@ V: View + ViewController，界面展示及界面逻辑都在这里
 
 调试功能，性能监测，网络异步交互，多线程，Foundation扩展，UIView扩展等等。
 
+- 支持arc（用arc的时候建议用pod建里项目），默认是非arc的。
+- 支持纯coding和xib
+- 支持原生和bee控件
+- 支持ar
+
+（arc是iOS 5推出的新功能，那些概念性的话就不多说了）看你的app最低版本需要了，如果要支持5.0以下，还是要arc的。
+
 ## Bee深入国内顶尖互联网公司
 
 Geek们都在用！行业内N家顶级互联网公司在采用。
@@ -87,7 +94,7 @@ Geek们都在用！行业内N家顶级互联网公司在采用。
   * iOS 4.0 or Higher
 
 
-## 目录结构
+### 目录结构
 
 
   * BeeDebugger/  
@@ -98,7 +105,7 @@ Geek们都在用！行业内N家顶级互联网公司在采用。
   * Example/
   * Documention/
 
-## 如何运行
+### 如何运行
 
 
 1. 打开 Example/WhatsBug.xcodeproj
@@ -135,7 +142,7 @@ Geek们都在用！行业内N家顶级互联网公司在采用。
 6.Good luck
 
 
-## 使用cocoapods管理
+### 使用cocoapods管理
 
 BeeFramefork 已经支持 [cocoapods](http://cocoapods.org) 管理依赖
 
