--- a/第一部分：入门/Beeframework快速入门/1. Bee.md
+++ b/第一部分：入门/Beeframework快速入门/1. Bee.md
@@ -185,3 +185,13 @@ pod 'BeeFramework',:head
 [1]: http://www.whatsbug.com
 [2]: http://itunes.apple.com/cn/app/qq-you-xi-da-ting/id443908613?mt=8
 [3]: http://itunes.apple.com/cn/app/qq-kong-jian/id364183992?mt=8
+
+
+## 现在就开始用吧
+
+- 基于MIT开源协议，无版权问题
+- 已有无数上线应用，有大型、著名应用
+- 老郭的公司会长期提供框架更新和技术支持
+- 只要框架更新，本教程就更新
+- 有更多开源项目参考，如fancy
+
