--- a/第一部分：入门/Beeframework快速入门/1. Bee.md
+++ b/第一部分：入门/Beeframework快速入门/1. Bee.md
@@ -64,7 +64,17 @@ Bee解决了一个界面难题，就是界面可配置
 - Bee可以用xml或json等文件格式来描述界面配置，可以从网络下载更新
 - 使用类似css语法，类似的开源项目如nimbus
 
+这里说V = (View + ViewController)是的原因是BeeUISignal机制，主要扩展了UIView和UIViewController。所以我们在board里创建的视图，一定是UIView和UIViewController的视图。
 
+Bee里的大部分控件都是扩展UIKit下的原生控件，它已经做的比较完善了，如果不满足您的需求，可以自己创建一份，参照Bee_UI*的实现即可，其实就是把事件或者属性变化变为signal方式，避免各种delegate回调。
+
+另外UIViewController其实是一个比较头疼的问题，在历史遗留项目里会有非常多的ViewController的，比如文章正文显示（用core text自己画的 ）或者一个列表，这些是可以在以后的开发中复用的，那么这时候怎么处理呢？
+
+1. 把ViewController的view作为board的view来管理
+2. 对ViewController增加UISignal机制
+3. 把ViewController的可变方法，写成delegate方法，并在创建实例的时候，把board对象设为此ViewController的delegate。
+
+当然新项目也可以这样复用ViewController的，后面会有下拉刷新的demo示例。
 
 
 ## Bee功能强大
@@ -77,7 +87,7 @@ Bee解决了一个界面难题，就是界面可配置
 - 支持ar
 
 arc是iOS 5推出的新功能，那些概念性的话就不多说了，这里要看你的app最低版本需要了，如果要支持5.0以下，还是要arc的。
-直接在targets->build phases中修改compiler Flags,是否支持arc。添加：-fobjc-arc，如果你不嫌蛋疼就添加吧，好多文件的。
+直接在targets->build phases中修改compiler Flags,是否支持arc。添加：-fobjc-arc，如果你不嫌蛋疼就添加吧，好多文件的。如果是新项目用arc，建议pod，如果是历史遗留的arc项目，那就辛苦点吧。
 
 ## Bee深入国内顶尖互联网公司
 
@@ -132,7 +142,7 @@ Geek们都在用！行业内N家顶级互联网公司在采用。
   * Example/
   * Documention/
 
-### 如何运行
+### 如何运行示例应用
 
 
 1. 打开 Example/WhatsBug.xcodeproj
@@ -193,5 +203,5 @@ pod 'BeeFramework',:head
 - 已有无数上线应用，有大型、著名应用
 - 老郭的公司会长期提供框架更新和技术支持
 - 只要框架更新，本教程就更新
-- 有更多开源项目参考，如fancy
+- 有更多开源项目参考，如https://github.com/BeeFramework/BeeFancy
 
